<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TestActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:paddingBottom="30dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1. "
                    android:textSize="18sp"
                    android:textColor="@android:color/black"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_question1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question1"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"/>

                    <EditText
                        android:id="@+id/et_answer1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/answer"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"/>

                </LinearLayout>


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2. "
                    android:textSize="18sp"
                    android:textColor="@android:color/black"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_question2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question2"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"/>

                    <RadioGroup
                        android:id="@+id/rg_answer2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/rb_bundle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/bundle"
                            android:textSize="18sp"
                            android:textColor="@android:color/black"/>

                        <RadioButton
                            android:id="@+id/rb_activity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/activity"
                            android:textSize="18sp"
                            android:textColor="@android:color/black"/>

                        <RadioButton
                            android:id="@+id/rb_string"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/string"
                            android:textSize="18sp"
                            android:textColor="@android:color/black"/>
                    </RadioGroup>

                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3. "
                    android:textSize="18sp"
                    android:textColor="@android:color/black"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_question3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question3"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/cb_implicit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/implicit_intent"
                            android:textSize="18sp"
                            android:textColor="@android:color/black"/>

                        <CheckBox
                            android:id="@+id/cb_explicit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/explicit_intent"
                            android:textSize="18sp"
                            android:textColor="@android:color/black"/>

                        <CheckBox
                            android:id="@+id/cb_activity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/activity_intent"
                            android:textSize="18sp"
                            android:textColor="@android:color/black"/>
                    </LinearLayout>

                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4. "
                    android:textSize="18sp"
                    android:textColor="@android:color/black"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_question4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question4"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"/>

                    <Spinner
                        android:id="@+id/sp_answer4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:entries="@array/answer4"
                        android:textColor="@android:color/black"/>

                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5. "
                    android:textSize="18sp"
                    android:textColor="@android:color/black"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_question5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question5"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"/>

                    <EditText
                        android:id="@+id/et_answer5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/answer"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"/>

                </LinearLayout>

            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/btn_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:background="@color/color4"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</ScrollView>