<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:gravity="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:layout_marginTop="-40dp">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/ic_android_green"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_knowledge"
            android:textColor="@color/color4"
            android:textSize="30sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android"
            android:textColor="@color/color4"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/et_nickname"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/nickname"
            android:gravity="center"
            android:layout_marginTop="22dp"
            android:textSize="18sp"
            android:textColor="@color/color4"/>

        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textColor="@android:color/white"
            android:background="@color/color4"
            android:textSize="18sp"
            android:layout_marginTop="12dp"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fb_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_info_outline_white"
        android:layout_margin="10dp"
        app:fabSize="normal"
        app:borderWidth="0dp"
        app:elevation="6dp"
        android:background="@color/colorPrimary" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>