<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".AboutActivity">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/ic_android_green"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/presented_title"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Choirul Anam"
        android:textStyle="bold|italic"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="(1174004)"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Oniwaldus Bere Mali"
        android:textStyle="bold|italic"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="6dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="(1174005)"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Kadek Diva Krishna Murti"
        android:textStyle="bold|italic"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="6dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="(1174006)"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Muhammad Rifky Prananda"
        android:textStyle="bold|italic"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="6dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="(1174017)"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Evietania Charis Sujadi"
        android:textStyle="bold|italic"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="6dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="(1174051)"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_title"
        android:textStyle="bold|italic"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="6dp">
        <Button
            android:id="@+id/btn_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="@android:color/white"
            android:background="@color/color4"
            android:layout_marginEnd="10dp"/>
        <Button
            android:id="@+id/btn_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website"
            android:textColor="@android:color/white"
            android:background="@color/color4"/>
    </LinearLayout>

</LinearLayout>